[package]
name = "tauri-plugin-rusqlite"
version = "0.5.0"
authors = [ "Kess" ]
description = "Tauri Plugin based on Rusqlite"
license = "MIT"
readme = "README.md"
edition = "2021"
rust-version = "1.80"
exclude = [ "/examples", "/webview-dist", "/webview-src", "node_modules" ]

[dependencies]
tauri = { version = "2" }
serde = "1.0"
thiserror = "1.0"
rusqlite = { version = "0.33.0", features = [ "bundled" ] }
serde_json = "1"
md5 = "0.7.0"
